--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
       <img
         class="avatar"
-        src="profile1.png"
+        src="images/profile1.png"
         alt="Amado E. Carmenates wearing sunglasses"
       />
       <div class="info">
